--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <h1>CALCULATOR</h1>
+        <h1>CALCULATOR321</h1>
     </nav>
     <div class="container">
         <input  id="item-1"  type="text" name="display">
